--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,13 @@
 @tailwind utilities;
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Nunito Sans', sans-serif;
+}
+p,h1,h2,h3,h4,h5,h6,.btn{
+  font-family: 'Nunito Sans', sans-serif;
+}
+input::placeholder{
+  font-family: 'Nunito Sans', sans-serif;
 }
 
 code {
