--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 body {
   margin: 0;
   font-family: 'Nunito Sans', sans-serif;
-  /* overflow-y: hidden; */
+  overflow-x: hidden !important;
 }
 p,h1,h2,h3,h4,h5,h6,.btn{
   font-family: 'Nunito Sans', sans-serif;
